<resources>
    <string name="app_name">VelfærdsApp</string>
    <string name="users_name_here">Users Name Here</string>
    <string name="question_subheader">Question Subheader</string>
    <string name="question_ipsum">Cat ipsum dolor sit amet, paw your face to wake you up in the morning yet human is in bath tub, emergency! drowning! meooowww! </string>

    <!-- StartPage Strings -->
    <string name="logoVfvoe_contentDescription">Videnscenter for Velfærdsteknologi Øst</string>
    <string name="logotTec_contentDescription">Technical Education Copenhagen</string>
    <string name="styrk_dit_valg">Styrk Dit Valg</string>

    <string name="your_avatar">Din Avatar</string>
    <string name="select_top_strengths">Vælg de 2 karaktertræk der passer bedst til dig. Disse karaktertræk vil skabe din avatar.</string>
    <string name="udfoer_text">UDFØR</string>
    <string name="send_resultat">Send Resultat</string>
    <string name="indtast_email">Indtast Email</string>
    <string name="avatar_description">Dette er din avatar baseret på dine karaktertræk</string>
    <string name="info_Tv">Tryk på Send knappen for at dele din avatar med andre</string>
    <string name="dropdown_arrow">Dropdown Arrow</string>
    <string name="strength_icon">Strength Icon</string>
    <string name="her_kan_du_se_betydningen_for_hver_svarmulighed">Her kan du se betydningen for hver svarmulighed</string>

    <!-- Button Strings -->
    <string name="btnStyrker_text">DE 24 STYRKER</string>
    <string name="btnVidere_text">VIDERE</string>
    <string name="btnForrige_text">FORRIGE</string>
    <string name="btnTilbage_text">TILBAGE</string>
    <string name="btnSend_text">SEND</string>

    <!-- Toolbar Title Strings For Fragments -->
    <string name="startpage_Title">Hjem</string>
    <string name="tutorial_Title">Tutorial</string>
    <string name="strengthsExpandleListView_Title">De 24 Styrker</string>
    <string name="questions_Title">Spørgsmål</string>
    <string name="yourTopStrengths_Title">Dine Karaktertræk</string>
    <string name="sendResult_Title">Din Avatar</string>

    <!-- Slider Strings -->
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="ikke_god">Ikke god</string>
    <string name="middel">Middel</string>
    <string name="meget_god">Meget god</string>

</resources>